<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_inventory"
        android:title="@string/title_inventory" />
    <item
        android:id="@+id/navigation_recipe"
        android:icon="@drawable/ic_restaurant"
        android:title="@string/title_recipe" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_order"
        android:title="@string/title_order" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/title_purchase" />
</menu>