<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.omsdgcaters.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.omsdgcaters.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_manage_user"
        android:name="com.example.omsdgcaters.ui.manage_user.ManageUserFragment"
        android:label="@string/title_manage_user"
        tools:layout="@layout/fragment_manage_user" />

    <fragment
        android:id="@+id/navigation_privacy_policy"
        android:name="com.example.omsdgcaters.ui.privacy_policy.PrivacyAndPolicyFragment"
        android:label="@string/title_privacy_policy"
        tools:layout="@layout/fragment_privacy_and_policy" />

    <fragment
        android:id="@+id/navigation_term_conditions"
        android:name="com.example.omsdgcaters.ui.term_conditions.TermAndConditionFragment"
        android:label="@string/title_term_condition"
        tools:layout="@layout/fragment_term_and_condition" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.omsdgcaters.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.example.omsdgcaters.ui.inventory.InventoryFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory" >
        <action
            android:id="@+id/action_add_new_inventory"
            app:destination="@id/navigation_add_new_inventory"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.omsdgcaters.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" >
        <action
            android:id="@+id/action_add_new_recipe"
            app:destination="@id/navigation_add_new_recipe"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.omsdgcaters.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.omsdgcaters.ui.purchase.PurchaseFragment"
        android:label="@string/title_purchase"
        tools:layout="@layout/fragment_purchase" />
    <fragment
        android:id="@+id/navigation_customer"
        android:name="com.example.omsdgcaters.ui.customer.CustomerFragment"
        android:label="@string/title_customer"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/navigation_add_new_inventory"
        android:name="com.example.omsdgcaters.ui.inventory.AddNewInventory"
        android:label="@string/title_add_new_inventory"
        tools:layout="@layout/fragment_add_new_inventory" />

    <fragment
        android:id="@+id/navigation_add_new_recipe"
        android:name="com.example.omsdgcaters.ui.recipe.AddNewRecipe"
        android:label="@string/title_add_new_inventory"
        tools:layout="@layout/fragment_add_new_recipe" />
</navigation>